'当gitpush超时时的方法'

--- a/test/Promsie/01promise相关题目分析.html
+++ b/test/Promsie/01promise相关题目分析.html
@@ -36,7 +36,7 @@
   }).then(res => {
     debugger;
     console.log(6);
-    
+    // git config --global http.proxy http://127.0.0.1:7890
   })
 </script>
 
